--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/ayush-lal/React-Boilerplate#readme",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^1.6.0",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
